--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                         in
                                         front of funky world.</p>
                                     <h1>$420</h1>
-                                    <div class="btn btn-danger">Bye Now</div>
+                                    <div class="btn btn-danger">Buy Now</div>
                                 </div>
 
                             </div>
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded bg-warning p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -71,7 +71,7 @@
                                         This is the best tv in the world for people who just want to waste time in front
                                         of tv.</p>
                                     <h1>$1200</h1>
-                                    <div class="btn btn-danger">Bye Now</div>
+                                    <div class="btn btn-danger">Buy Now</div>
                                 </div>
 
                             </div>
@@ -80,7 +80,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded bg-info p-5">
+                    <div class="carousel-item active border rounded bg-danger p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -89,7 +89,7 @@
                                     <p>This is the best x-box in the world for people who just want to waste time in
                                         front of fake sports.</p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-danger">Bye Now</div>
+                                    <div class="btn btn-danger">Buy Now</div>
                                 </div>
 
                             </div>
@@ -117,7 +117,7 @@
     <main>
         <section>
             <div class="container text-center my-5">
-                <div class="row g-2">
+                <div class="row">
                     <!-- Single category -->
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                         <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-around">
@@ -142,6 +142,54 @@
                 </div>
             </div>
         </section>
+        <!-- categories end -->
+        <!-- Shoes section start -->
+        <section class="container my-5">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-danger">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-danger">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-danger">Buy Now</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Shoes section end -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
