--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Panda Commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
@@ -27,13 +29,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -53,7 +55,7 @@
                                         in
                                         front of funky world.</p>
                                     <h1>$420</h1>
-                                    <div class="btn btn-danger">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
 
                             </div>
@@ -62,7 +64,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item active border rounded bg-warning p-5">
+                    <div class="carousel-item active border rounded panda-bg-warning p-5">
                         <div class="row">
                             <div class="col-lg-7 d-flex align-items-center">
                                 <div>
@@ -71,7 +73,7 @@
                                         This is the best tv in the world for people who just want to waste time in front
                                         of tv.</p>
                                     <h1>$1200</h1>
-                                    <div class="btn btn-danger">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
 
                             </div>
@@ -89,7 +91,7 @@
                                     <p>This is the best x-box in the world for people who just want to waste time in
                                         front of fake sports.</p>
                                     <h1>$600</h1>
-                                    <div class="btn btn-danger">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
 
                             </div>
@@ -117,7 +119,7 @@
     <main>
         <section>
             <div class="container text-center my-5">
-                <div class="row">
+                <div class="row categories">
                     <!-- Single category -->
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
                         <div class="p-3 border bg-warning rounded-3 d-flex align-items-center justify-content-around">
@@ -144,7 +146,7 @@
         </section>
         <!-- categories end -->
         <!-- Shoes section start -->
-        <section class="container my-5">
+        <section class="container my-5" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -156,7 +158,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-danger">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -169,7 +171,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-danger">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -183,7 +185,7 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-danger">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -191,7 +193,7 @@
         </section>
         <!-- Shoes section end -->
         <!-- Backpack section start -->
-        <section class="container my-5">
+        <section class="container my-5" id="backpack">
             <h2>Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -204,7 +206,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-danger">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -218,7 +220,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-danger">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -233,14 +235,32 @@
                                 height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-danger">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Backpack section end -->
+        <!-- Subscribe start -->
+        <section class="container rounded-3 d-flex panda-bg-warning justify-content-center align-items-center"
+            style="height: 300px;" id="subscribe">
+            <div>
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales, specials and more
+                </p>
+                <form>
+                    <div class="mb-1">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <button type="submit" class="btn panda-btn-buy-now">Submit</button>
+                </form>
+            </div>
+        </section>
+        <!-- Subscribe end -->
     </main>
+    <footer class="mt-5 text-center"><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
